--- a/style.css
+++ b/style.css
@@ -218,6 +218,13 @@ span {
 }
 
 @media  screen and (max-width:930px) {
+    *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+}
     nav .hamb{
         display: initial;
     }
